fix(online-test): invisible text in input box

--- a/online-test/styles/components/input.css
+++ b/online-test/styles/components/input.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0.5em;
   font-size: inherit;
+  color: inherit;
   border: 1px solid gray;
   border-radius: 0.5em;
   background-color: inherit;
